2008-02-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/notes-area.c (projects_tree_clicked): Added callback
	function for displaying the context menu when user right clicks on
	projects tree.
	(notes_area_add_projects_tree): Connect projects tree to the right
	click callback function.

2008-02-13  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/Makefile.am: Made changes according to changes in
	configure.in.

	* configure.in:
	  - Separately check for glib, GTK+, libgnome and libgnomeui
	  - Fix check for libgconf
	  - Make minimum required versions of:
	    - GTK+ = 2.10
	    - GLIB = 2.14

2008-02-08  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/xml-write.c: Added BAD_CAST in the invocations to xml*
	functions to avoid warnings about different "signedness" in
	parameters.

2008-02-03  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/prefs.c: removed the unused functions get_optionmenu_item
	and set_optionmenu_item

	* glade/prefs.glade: Use GtkEntry instead of the deprecated
	GnomeEntry.

2008-02-02  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/prefs.glade: Use GtkComboBox instead of the deprecated
	GtkOptionMenu
	  - Use GtkFileChooserButton instead of the deprecated
	  GnomeFileEntry

	* src/prefs.c: Use GtkComboBox instead of the deprecated
	  GtkOptionMenu
	  - Use GtkFileChooserButton instead of the deprecated
	  GnomeFileEntry

2008-02-01  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/plugin_editor.glade: Use GtkFileChooserButton instead of
	the deprecated GnomeFileEntry in the edit plugin dialog.

	* src/plug-edit.c (edit_plugin_widgets_to_item)
	(edit_plugin_item_to_widgets, edit_plugin_clear_widgets)
	(edit_plugin_dialog_new): Use GtkFileChooserButton instead of the
	deprecated GnomeFileEntry in the edit plugin dialog.

	* glade/plugin.glade: Use GtkFileChooserButton instead of the
	deprecated GnomeFileEntry in the new plugin dialog

	* src/plug-in.c (new_plugin_create_cb): Use GtkFileChooserButton